# resonix

./: AGENTS.md  README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/audio/: bpm.rs  mod.rs  playback.rs  waveform.rs
src-tauri/src/platform/: file_drag.rs  mod.rs
